@@ -50,11 +50,13 @@ USERLAND_CFLAGS+=$(USERCOMPILE)
 
 ifeq ($(USE_DNSSEC),true)
 USERLAND_CFLAGS+=-DDNSSEC
+UNBOUND_LDFLAGS ?= -lunbound
 endif
 
 ifeq ($(USE_FIPSCHECK),true)
 USERLAND_CFLAGS+=-DFIPS_CHECK
 USERLAND_CFLAGS+=-DFIPSPRODUCTCHECK=\"${FIPSPRODUCTCHECK}\"
+FIPSCHECK_LDFLAGS ?= -lfipscheck
 endif
 
 ifeq ($(USE_KLIPS),true)
