@@ -14,7 +14,7 @@
 PROGLIBS=${NSSFLAGS}
 
 PROGRAM=_import_crl
-LIBS?=${PROGLIBS} ${LIBRESWANLIB} ${LSWLOGLIB} ${NSSLIBS}
+LIBS?=${PROGLIBS} ${LIBRESWANLIB} ${LSWLOGLIB} $(NSS_LDFLAGS)
 
 #INCLUDES=-I${LIBRESWANSRCDIR}/programs/pluto
 INCLUDES+=-I${srcdir} -I${LIBRESWANSRCDIR}/include
