@@ -227,9 +227,9 @@ LIBSPLUTO+=$(THREADS_LIBS)
 LIBSPLUTO+=${CURL_LIBS}
 LIBSPLUTO+=${EXTRA_CRYPTO_LIBS} ${LABELED_IPSEC_LIBS}
 LIBSPLUTO+=${SYSTEMD_NOTIFY_LIBS}
-LIBSPLUTO+=${WHACKLIB} ${BSDKAME_LIBS} ${NSSLIBS}
+LIBSPLUTO+=${WHACKLIB} ${BSDKAME_LIBS} $(NSS_LDFLAGS)
 PLUTOMINUSL+= ${X509_LLIBS} ${CURL_LLIBS} ${THREADS_LLIBS}
-PLUTOMINUSL+= ${XAUTH_LLIBS} ${XAUTHPAM_LIBS} ${NSSLIBS}
+PLUTOMINUSL+= ${XAUTH_LLIBS} ${XAUTHPAM_LIBS} $(NSS_LDFLAGS)
 PLUTOMINUSL+= ${LIBCRYPT}
 
 # For avoiding implicit DSO linking
@@ -255,16 +255,14 @@ SYSDEP_OBJ=sysdep_${OSDEP}.o
 
 # End of configuration coping options.
 
-LDFLAGS+=${NSSLIBS}
+LDFLAGS+=$(NSS_LDFLAGS)
 
 ifneq ($(LD_LIBRARY_PATH),)
 LDFLAGS+=-L$(LD_LIBRARY_PATH)
 endif
 
 LIBSPLUTO += $(IPSECCONFLIB) $(LIBRESWANLIB)   -lrt
-ifeq ($(USE_DNSSEC),true)
-LIBSPLUTO += -lunbound
-endif
+LIBSPLUTO += $(UNBOUND_LDFLAGS)
 
 ifeq ($(USE_LINUX_AUDIT),true)
 LIBSPLUTO += -laudit
