@@ -8,6 +8,7 @@ v3.18 (unreleased)
 * pluto: Extend mark= support for mark-in= and mark-out= [Paul]
 * pluto: Add systemd watchdog support via USE_SYSTEMD_WATCHDOG [Matt/Paul]
 * addconn: Find peer IP address when resolving default route [Daniel M. Weeks]
+* building: the make variable NSSLIBS was renamed to NSS_LDFLAGS
 
 v3.17 (April 4, 2016)
 * SECURITY: CVE-2016-3071: IKEv2 aes_xcbc transform causes restart [Andrew]
